// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restServers/usuarios delete fail 1`] = `Object {}`;

exports[`restServers/usuarios delete fail 2`] = `"delete from Usuarios where idUsuario = 999"`;

exports[`restServers/usuarios delete success 1`] = `Object {}`;

exports[`restServers/usuarios delete success 2`] = `"delete from Usuarios where idUsuario = 25"`;

exports[`restServers/usuarios login fail password 1`] = `Object {}`;

exports[`restServers/usuarios login fail password 2`] = `
"select idUsuario, usuario, nombre, nivel, 
    rolDios, rolGuarda, rolMecanico, rolSupervisor, funcion 
    from Usuarios where usuario = 'pepe' and password = '93b885adfe0da089cdf634904fd59f71'"
`;

exports[`restServers/usuarios login fail usuario 1`] = `Object {}`;

exports[`restServers/usuarios login fail usuario 2`] = `
"select idUsuario, usuario, nombre, nivel, 
    rolDios, rolGuarda, rolMecanico, rolSupervisor, funcion 
    from Usuarios where usuario = 'pepe' and password = '93b885adfe0da089cdf634904fd59f71'"
`;

exports[`restServers/usuarios login success 1`] = `
Object {
  "user": Object {
    "nombre": "José Pérez",
    "rolDios": false,
    "rolGuarda": false,
    "rolMecanico": false,
    "rolSupervisor": false,
    "usuario": "pepe",
  },
}
`;

exports[`restServers/usuarios login success 2`] = `
"select idUsuario, usuario, nombre, nivel, 
    rolDios, rolGuarda, rolMecanico, rolSupervisor, funcion 
    from Usuarios where usuario = 'pepe' and password = '25f9e794323b453885f5181f1b624d0b'"
`;

exports[`restServers/usuarios logout success 1`] = `Object {}`;

exports[`restServers/usuarios logout success 2`] = `undefined`;

exports[`restServers/usuarios signup fail faltan datos 1`] = `Object {}`;

exports[`restServers/usuarios signup fail faltan datos 2`] = `undefined`;

exports[`restServers/usuarios signup fail nombre existe 1`] = `Object {}`;

exports[`restServers/usuarios signup fail nombre existe 2`] = `"insert into Usuarios set \`usuario\` = 'pepe', \`nombre\` = 'José Pérez', \`password\` = '25f9e794323b453885f5181f1b624d0b'"`;

exports[`restServers/usuarios signup success 1`] = `Object {}`;

exports[`restServers/usuarios signup success 2`] = `"insert into Usuarios set \`usuario\` = 'pepe', \`nombre\` = 'José Pérez', \`password\` = '25f9e794323b453885f5181f1b624d0b'"`;

exports[`restServers/usuarios update fail 1`] = `Object {}`;

exports[`restServers/usuarios update fail 2`] = `"update Usuarios set \`usuario\` = 'pepe', \`nombre\` = 'José Pérez' where idUsuario = 999"`;

exports[`restServers/usuarios update success 1`] = `Object {}`;

exports[`restServers/usuarios update success 2`] = `"update Usuarios set \`usuario\` = 'pepe', \`nombre\` = 'José Pérez' where idUsuario = 25"`;

exports[`restServers/usuarios userData fail 1`] = `Object {}`;

exports[`restServers/usuarios userData fail 2`] = `"select * from UsuariosSimple where usuario = 'pepe'"`;

exports[`restServers/usuarios userData success 1`] = `Object {}`;

exports[`restServers/usuarios userData success 2`] = `"select * from UsuariosSimple where usuario = 'pepe'"`;
